added a listMaker file, and connected it to the document ready function

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="index.css"/>
+    <link rel="stylesheet" type="text/css" href="styles/index.css"/>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
 	<title>jason-bookmark-app</title>
@@ -36,7 +36,8 @@
 	
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/cuid/1.3.8/browser-cuid.min.js"></script>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-	<script type="application/javascript" src="store.js"></script>
-	<script type="application/javascript" src="index.js"></script>
+	<script type="application/javascript" src="scripts/store.js"></script>
+	<script type="application/javascript" src="scripts/listMaker.js"></script>
+	<script type="application/javascript" src="scripts/index.js"></script>
 </body>
 </html>
