--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en-US">
 	
 <head>
@@ -6,7 +6,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="styles/index.css"/>
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
 	<title>jason-bookmark-app</title>
 </head>
@@ -30,9 +29,10 @@
 	</header>
 	<main>
 		<section>
-			<form class="js-bookmark-list">
-			
+			<form class="js-add-bookmark">
 			</form>
+			<ul class="js-bookmark-list">	
+			</ul>
 		</section>
 	</main>
 	
@@ -40,6 +40,7 @@
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<script type="application/javascript" src="scripts/store.js"></script>
 	<script type="application/javascript" src="scripts/listMaker.js"></script>
+	<script type="application/javascript" src="scripts/mainRender.js"></script>
 	<script type="application/javascript" src="scripts/index.js"></script>
 </body>
 </html>
