--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<header>
 		<div>
 			<h1>New Bookmark App</h1>
-			<label for="add-button" name="add-button">Add Button</label>
+			<label for="add-button" name="add-button">Add Bookmark</label>
 			<button id="add-button">+</button>
 			<label for="filter-button">Filter by rating</label>                  
 			<select class="stars" id="filter-button" name="filter-button">
