--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/cuid/1.3.8/browser-cuid.min.js"></script>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<script type="application/javascript" src="scripts/store.js"></script>
+	<script type="application/javascript" src="scripts/api.js"></script>
 	<script type="application/javascript" src="scripts/listMaker.js"></script>
 	<script type="application/javascript" src="scripts/mainRender.js"></script>
 	<script type="application/javascript" src="scripts/index.js"></script>
